cleanup long neglected code

--- a/build.xml
+++ b/build.xml
@@ -40,10 +40,10 @@
     		</fileset>
   		</copy>
 		
-		<copy todir="${classes}/" file="license.txt"/>
+		<copy todir="${classes}/" file="LICENSE"/>
 
 		<!-- Compile the java code from ${src} into ${classes} -->
-		<javac debug="true" srcdir="${src}" destdir="${classes}">
+		<javac debug="true" srcdir="${src}" destdir="${classes}" target="1.8" source="1.8">
 			<classpath refid="classpath"/>
 		</javac>
 	</target>
@@ -97,9 +97,5 @@ java -jar ../antBuild/lib/duplicateFinder.jar
 		<chmod dir="${bin}" perm="ugo+rx" includes="**/*.sh"/>
 	</target>
 	
-	<target name="signJar">
-		<signjar jar="${dist}/duplicateFinder.jar" alias="dan" keystore="myKeystore" storepass="myKeystorePass"/>
-	</target>
-
-	<target name="all" depends="init, clean, compile, jar, jarDepen, javadocs, scripts, signJar" description="cleans, compiles, jars, docs"/>
+	<target name="all" depends="init, clean, compile, jar, jarDepen, javadocs, scripts" description="cleans, compiles, jars, docs"/>
 </project>
